# usb-audio-organizer

./: .gitignore  MANIFEST.in  README.md  beets-encode.sh  config.yaml  pyproject.toml  sync-device.sh
shokz_sync/: __init__.py  beets_config.py  cli.py  dependencies.py  diskutil_utils.py  fatsort_utils.py
tests/: __init__.py  test_core_behavior.py
